# AI-Agent-Lab

./: .env.example  .gitignore  AGENTS.md  AGENTS_CN.md  CHANGELOG.md  LICENSE  README.md  README_CN.md  requirements.txt
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260712_0001_initial_schema.py  20260717_0002_agent_runs_tool_calls.py  20260718_0003_agent_run_message_consistency.py  20260720_0004_tool_call_sequence.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  errors.py  simple_agent.py
backend/app/api/: dependencies.py  errors.py
backend/app/core/: config.py  logging.py  request_context.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_run.py  conversation.py  llm_call.py  message.py  tool_call.py
backend/app/providers/: __init__.py
backend/tests/: test_agent_api.py  test_agent_migrations.py  test_agent_models.py  test_agent_service.py  test_chat_api.py  test_chat_service.py  test_config.py  test_conversation_service.py  test_db_session.py  test_error_handling.py  test_health.py  test_llm_model_registry.py  test_llm_provider_base.py  test_llm_provider_factory.py  test_llm_tool_adapter.py  test_llm_usage.py  test_migrations.py  test_models.py  test_openai_compatible_provider.py  test_release_version.py  test_request_logging.py  test_schemas.py  test_simple_agent.py  test_tool_base.py  test_tool_list_dir.py  test_tool_read_file.py  test_tool_registry.py  test_tool_schemas.py  test_tool_security.py  test_tool_validation.py  test_web_fetch_deferral.py
(+163 files in other folders)
