[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-lab-backend"
version = "0.1.0"
description = "FastAPI backend for AI Agent Lab."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.138.0,<0.139.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "uvicorn>=0.49.0,<0.50.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<0.29.0",
    "pytest>=9.1.0,<10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]
