[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-lab-backend"
version = "0.1.0"
description = "FastAPI backend for AI Agent Lab."
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.18.5,<1.19.0",
    "fastapi>=0.138.0,<0.139.0",
    "httpx>=0.28.0,<0.29.0",
    "jsonschema>=4.26.0,<5.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "sqlalchemy>=2.0.51,<2.1.0",
    "uvicorn>=0.49.0,<0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0,<10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]
